# Prever-Aluguel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
data/processed/: dados_tratados.csv
data/raw/: dados_brutos.csv
