[tool.poetry]
name = "aluguel"
version = "0.1.0"
description = "dependências da aplicação de previsão de aluguel"
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
streamlit = "^1.7.0"
pandas = "^1.3.4"
plotly = "^5.6.0"
numpy = "^1.20.3"
scikit-learn="^1.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
